framework/tests/framework/UnimportedExtends2.java
// warning: Javac errored; type checking halted.

public class UnimportedExtends2 {
    // :: error: cannot find symbol
    class Inner extends UnimportedClass {}
}
